<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layout_app">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingVertical="15dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="1"
                android:text="@string/languages"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintTop_toTopOf="@+id/frSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/frSave"
                />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select_language_to_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                />



            <FrameLayout
                android:id="@+id/frSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:alpha="0.5"
                    android:background="@drawable/bg_done_language"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:text="@string/done"
                    android:textColor="@color/black" />
                <ProgressBar
                    android:layout_marginStart="@dimen/_16sdp"
                    android:id="@+id/progressSave"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/green"/>




            </FrameLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/handAnim"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_alignParentEnd="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/frSave"
                app:layout_constraintBottom_toBottomOf="@+id/frSave"
                android:layout_gravity="end"
                android:visibility="gone"
                app:lottie_rawRes="@raw/hand" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.fitness.pedometer.walkrun.stepmonitor.utils.language.UILanguageCustom
            android:id="@+id/uiLanguage"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/fr_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />
        <FrameLayout
            android:id="@+id/fr_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_ads_native"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:id="@+id/shimmer_native_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include layout="@layout/ads_shimmer_native_language" />
            </RelativeLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>